# POS

./: Requirements.txt
pos-backend/: .gitignore  Cargo.toml
pos-backend/migrations/: 20241205110658_sales.sql  20241205110749_inventory.sql
pos-backend/src/: application_state.rs  database.rs  main.rs  mdatabase.rs  mongodb.rs  test.rs
pos-backend/src/controllers/: add_invoice.rs  add_product.rs  check_cost.rs  check_sales.rs  day_end.rs  delete_product.rs  get_all_products.rs  get_product_details.rs  greet.rs  hello.rs  login.rs  mod.rs  search.rs  update_product.rs  update_stock.rs
pos-backend/src/models/: invoice.rs  mod.rs  product.rs  sales.rs
pos-backend/src/routes/: routes.rs
pos-frontend/: electron.js  error.txt  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
pos-frontend/src/: App.jsx  index.css
pos-frontend/src/components/: EditableField.jsx  List.jsx  Modal.jsx  Navbar.jsx  Table.jsx  Tabs.jsx  TaxUpdateModal.jsx  UpdateModal.jsx  invoice.jsx
pos-frontend/src/layout/: MainLayout.jsx
pos-frontend/src/pages/: LoginPage.jsx  MainPage.jsx  login.jsx
