[package]
name = "pos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
actix-cors = "0.7.0"
actix-web = "4.9.0"
bigdecimal = {version="0.4.6", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = {version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features= ["postgres","runtime-tokio-native-tls","bigdecimal"]}
mongodb= {  version = "3.0", features = ["sync"]  }
chrono = "0.4.38"
